--- a/WebApplication4/WebApplication4/Views/Evento/Register.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Register.cshtml
@@ -1,4 +1,9 @@
-﻿@{
+﻿@using Microsoft.AspNet.Identity;
+@using WebApplication4.Models;
+
+@model EventoModel
+
+@{
     ViewBag.Title = "Register";
     Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
 }
@@ -18,9 +23,11 @@
     </div><br>
 
 
-    @using (Html.BeginForm("Register", "Evento", FormMethod.Post, new { }))
-    {
-    <!--DECLARAMOS EL TABS Y LA CANTIDAD DE PESTAÑAS QUE TENDRA -->
+    <form action="" method="post" enctype="multipart/form-data">
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true);
+
+        <!--DECLARAMOS EL TABS Y LA CANTIDAD DE PESTAÑAS QUE TENDRA -->
         <ul class="nav nav-tabs">
             <li id="tab_1" class="active"><a href="#generales" data-toggle="tab">Datos Generales</a></li>
             <li id="tab_2"><a href="#bloques_tiempo" data-toggle="tab">Bloques de tiempo de venta</a></li>
@@ -30,12 +37,12 @@
         </ul>
 
 
-    <!--INTRODUCIMOS EL CONTIDO QUE TENDRA CADA PESTAÑA -->
+        <!--INTRODUCIMOS EL CONTIDO QUE TENDRA CADA PESTAÑA -->
         <div class="tab-content">
             <!--PRIMERA PESTAÑA-->
             <div class="tab-pane active  fade in  container" id="generales">
                 <br>
-                <form action="" class="form-horizontal">
+                <div class="form-horizontal">
                     <div class="form-group">
                         <label for="nombre" class="control-label col-md-2">Nombre:</label>
                         <div class="col-md-10">
@@ -100,8 +107,8 @@
                         <div class="col-md-4">
                             <select class="form-control" name="" id="departamento" onchange="hola">
                                 @{
-        var db = new WebApplication4.Models.inf245netsoft();
-        List<WebApplication4.Models.Region> list = db.Region.Where(c => c.idRegPadre == null).ToList();
+                                    var db = new WebApplication4.Models.inf245netsoft();
+                                    List<WebApplication4.Models.Region> list = db.Region.Where(c => c.idRegPadre == null).ToList();
                                 }
                                 <option value="0">Seleccione</option>
                                 @foreach (var reg in list)
@@ -121,7 +128,7 @@
                             <textarea class="form-control " rows="8" id="descripcion"></textarea>
                         </div>
                     </div>
-                </form>
+                </div>
             </div>
             <!--SEGUNDA PESTAÑA-->
             <div class="tab-pane fade in container" id="bloques_tiempo">
@@ -303,25 +310,34 @@
                     </div>
                     <div class="row">
                         <div class="form-group">
-                            <label for="nombre" class="control-label col-md-2">Ruta imagen principal del evento: </label>
+                            @Html.LabelFor(m => m.ImageEvento)
+                             <div class="col-md-6">
+                                @Html.TextBoxFor(m => m.ImageEvento, new { type = "file" })
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.ImageDestacado)
                             <div class="col-md-6">
-                                <input type="text" class="form-control">
+                                @Html.TextBoxFor(m => m.ImageDestacado, new { type = "file" })
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group">
-                            <label for="nombre" class="control-label col-md-2">Ruta imagen evento destacado: </label>
+                            @Html.LabelFor(m => m.ImageSitios)
                             <div class="col-md-6">
-                                <input type="text" class="form-control">
+                                @Html.TextBoxFor(m => m.ImageSitios, new { type = "file" })
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-4 col-md-offset-2">
-                            <div class="checkbox">
-                                <label><input type="checkbox" value="">Destacado</label>
-                            </div>
+                            @Html.LabelFor(m => m.EsDestacado)
+                            @Html.EditorFor(m => m.EsDestacado)
+                            
                             <div class="checkbox">
                                 <label><input type="checkbox" value="">Permitir reservas vía web</label>
                             </div>
@@ -332,32 +348,32 @@
                     </div>
                     <div class="row">
                         <div class="col-md-2 col-md-offset-5">
-                            <button class="btn btn-primary">Registrar evento</button>
+                            <button type="submit" class="btn btn-primary">Registrar Evento</button>    
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    }
+        </form>
 
-    <!--ventana de buscar organizador-->
-    <div class="modal fade" id="modalBuscarOrganizador">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <!--ACA VA EL CONTENIDO DEL MODAL-->
-                <!--contenido de la ventana-->
-                <div class="modal-body">
-                    <form action="" class="form-horizontal">
-                        <div class="form-group">
-                            xdxx
-                        </div>
-                    </form>
-                </div>
-                <!--footer de la ventana-->
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-ok"></span> Seleccionar</button>
+        <!--ventana de buscar organizador-->
+        <div class="modal fade" id="modalBuscarOrganizador">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <!--ACA VA EL CONTENIDO DEL MODAL-->
+                    <!--contenido de la ventana-->
+                    <div class="modal-body">
+                        <form action="" class="form-horizontal">
+                            <div class="form-group">
+                                xdxx
+                            </div>
+                        </form>
+                    </div>
+                    <!--footer de la ventana-->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-ok"></span> Seleccionar</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 </div>
