--- a/WebApplication4/WebApplication4/Views/Evento/Register.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Register.cshtml
@@ -44,9 +44,10 @@
                 <br>
                 <div class="form-horizontal">
                     <div class="form-group">
-                        <label for="nombre" class="control-label col-md-2">Nombre:</label>
-                        <div class="col-md-10">
-                            <input type="text" class="form-control" id="nombre" placeholder="Nombre del evento">
+                        @Html.LabelFor(m => m.nombre, new { @class="control-label col-md-2"})
+                        <div class="col-md-6">
+                            @Html.TextBoxFor(m => m.nombre, new { @class="form-control"})
+                            @Html.ValidationMessageFor(model => model.nombre)
                         </div>
                     </div><br><br>
                     <div class="form-group">
@@ -313,7 +314,8 @@
                             @Html.LabelFor(m => m.ImageEvento)
                              <div class="col-md-6">
                                 @Html.TextBoxFor(m => m.ImageEvento, new { type = "file" })
-                            </div>
+                                @Html.ValidationMessageFor(model => model.ImageEvento)
+                             </div>
 
                         </div>
                     </div>
@@ -322,6 +324,7 @@
                             @Html.LabelFor(m => m.ImageDestacado)
                             <div class="col-md-6">
                                 @Html.TextBoxFor(m => m.ImageDestacado, new { type = "file" })
+                                @Html.ValidationMessageFor(model => model.ImageDestacado)
                             </div>
                         </div>
                     </div>
@@ -330,6 +333,7 @@
                             @Html.LabelFor(m => m.ImageSitios)
                             <div class="col-md-6">
                                 @Html.TextBoxFor(m => m.ImageSitios, new { type = "file" })
+                                @Html.ValidationMessageFor(model => model.ImageSitios)
                             </div>
                         </div>
                     </div>
@@ -337,7 +341,6 @@
                         <div class="col-md-4 col-md-offset-2">
                             @Html.LabelFor(m => m.EsDestacado)
                             @Html.EditorFor(m => m.EsDestacado)
-                            
                             <div class="checkbox">
                                 <label><input type="checkbox" value="">Permitir reservas vía web</label>
                             </div>
