en html si el < esta separado de los que se esta haciendo ej <a ><a/>, no poder asi < a. solo porq el espacio no renococe las cosas plox

--- a/WebApplication4/WebApplication4/Views/Home/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Home/Index.cshtml
@@ -2,10 +2,8 @@
 @using WebApplication4.Models;
 
 @{
-    ViewBag.Title = "TickNet";    
+    ViewBag.Title = "TickNet";
 }
-
-
 
 <html>
 <body>
@@ -19,20 +17,19 @@
                     }
                     <!--indicadores primero-->
                     <ol class="carousel-indicators">
-                        @for (var i = 0; i < listaDestacados.Count; i++ )
+                        @for (var i = 0; i < listaDestacados.Count; i++)
                         {
-                            <li data-target="#carousel-1" data-slide-to= @("" + i) class="active"></li>
+                            <li data-target="#carousel-1" data-slide-to=@("" + i) class="active"></li>
                         }
-                        
+
                     </ol>
                     <!--Contenedor de los slide-->
                     <div class="carousel-inner" role="listbox">
-                        
-
-                        @for (var i = 0; i < listaDestacados.Count; i++ ){
-                                    <div class=  " @((i==0)?"item active":"item ") " >
-                                        < a href="@Url.Action("ViewEvent","Event")"><img src=@listaDestacados[i].ImagenDestacado height="500" width="1200" class="img-responsive" alt=@listaDestacados[i].nombre></a>
-                                    </div>
+                        @for (var i = 0; i < listaDestacados.Count; i++)
+                        {
+                            <div class=@((i==0)?"item active":"item ")>
+                                <a href="@Url.Action("ViewEvent", "Event")"><img src=@listaDestacados[i].ImagenDestacado height="500" width="1200" class="img-responsive" alt=@listaDestacados[i].nombre></a>
+                            </div>
                         }
 
                     </div>
