--- a/WebApplication4/WebApplication4/Views/Evento/Provincia.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Provincia.cshtml
@@ -1,8 +1,10 @@
 ﻿@{
     Layout = null;
-}
-@{
     var db = new WebApplication4.Models.inf245netsoft();
-    var source = db.Region.Where(c => "" + c.idRegPadre == Request["rPadre"]);
-    Json.Write(source, Response.Output);
+    int depId = int.Parse(Request["depId"]);
+    var data = from obj in db.Region
+               where obj.idRegPadre == depId
+               select new { IdRegion = obj.idRegion, Nombre = obj.nombre };
+                                               
+    Json.Write(data, Response.Output);
 }
