se borraron unas cosas por los conflictos, ya esta resuelto

--- a/WebApplication4/WebApplication4/Views/Evento/Register.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Register.cshtml
@@ -446,7 +446,7 @@
                 $.ajax({
                     url: "Provincia",
                     data: { depId: depId },
-                    datatype: "jsonp",
+                    datatype: "json",
                     success: function (data) {
                         var obj = $.parseJSON(data);
                         $.each(obj, function (k, v) {
