--- a/WebApplication4/WebApplication4/Views/Shared/_LayoutPersonal.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_LayoutPersonal.cshtml
@@ -102,7 +102,7 @@
                                 <li class="divider"></li>
                                 <li><a href="Reporte_Asignacion_de_Vendedores.html">Asignación de vendedores</a></li>
                                 <li><a href="reporte_asistencia_vendedores.html">Asistencia</a></li>
-                                <li><a href="ReporteCliente.html">Clientes</a></li>
+                                <li><a href="@Url.Action("ReporteCliente", "CuentaUsuario")">Clientes</a></li>
                             </ul>
                         </li>
 
