--- a/WebApplication4/WebApplication4/Views/EventosPrueba/GetDistritosPorDepart.cshtml
+++ b/WebApplication4/WebApplication4/Views/EventosPrueba/GetDistritosPorDepart.cshtml
@@ -1,9 +1,14 @@
-﻿@{
+﻿@model WebApplication4.Models.Region
+
+@{
     Layout = null;
+    ViewBag.Title = "GetDistritosPorDepart";
+
     var db = new WebApplication4.Models.inf245netsoft();
     int id = int.Parse(Request["id"]);
     var data = from obj in db.Region
                where obj.idRegPadre == id
                select new { IdRegion = obj.idRegion, Nombre = obj.nombre };
     Json.Write(data, Response.Output);
+
 }
